2003-09-30  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "eu" to ALL_LINGUAS.

2003-09-27  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceundomanager.c (gtk_source_undo_manager_undo) 
	(gtk_source_undo_manager_delete_range_handler): When undoing a
	delete action, place the cursor where it really was when the user
	deleted the text (bug #112682).
	(gtk_source_undo_manager_check_list_size): Keep a pointer to the
	new list tail instead of iterating through all the list for each
	removed action.
	(gtk_source_undo_manager_set_max_undo_levels): Shrink the actions
	list if needed due to the new maximum undo levels (bug #123273).

2003-09-27  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/java.lang: Remove the two new
	translatable strings and restore the old one, by joining the
	pattern items (doh!).

2003-09-27  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/html.lang: Added missing <iframe>
	to the tags keyword list (bug #121501).

	* gtksourceview/language-specs/po.lang: Added escape character and
	missing msgid_plural (Pointed by Abel Cheung, bug #121190).

	* gtksourceview/language-specs/java.lang: Fixed numbers regular
	expression pattern (bug #115780).

2003-09-25  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcelanguage.c (gtk_source_language_finalize): 
	Remove debugging output (bug #121204).

	* gtksourceview/gtksourceiter.c (backward_lines_match) 
	(gtk_source_iter_backward_search): Fix backward case-insensitive
	search (bug #114666).

	* gtksourceview/gtksourcetag.c (gtk_keyword_list_tag_new):
	Truncate keyword lists of more than 250 elements (temporary fix
	for bug #110991).

	* README: Added note about the keywords limit.

2003-09-17  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" (Tamil) to the languages' list.

2003-09-14  Andras Timar  <timar@gnome.hu>

	* configure.in: Added "hu" to ALL_LINGUAS.
